--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
 		<div class="container">
 			<div class="row name-title-company">
 				<div class="col is-6">
-					<p class="text-name">Jonathan Young</p>
+					<p class="text-name">Colin Hunt</p>
 					<p class="text-title-company">Co-Founder</p>
 					<p class="text-title-company">Prospre</p>
 				</div>
@@ -37,14 +37,14 @@
 	</section>
 
 	<section class="bg-color-white secondary-info">
-		<a href="mailto:jonathan@prospre.io">
+		<a href="mailto:colin@prospre.io">
 			<div class="container">
 				<div class="row detail">
 					<div class="col">
 						<img src="assets/icon-email.svg" alt="Email Icon"">
 					</div>
 					<div class="col is-8">
-						<p class="text-detail">jonathan@prospre.io</p>
+						<p class="text-detail">colin@prospre.io</p>
 					</div>
 					<div class="col">
 						<img src="assets/right-arrow.svg" alt="Right Arrow" height="50%" width="40%">
@@ -55,14 +55,14 @@
 	</section>
 
 	<section class="bg-color-white secondary-info">
-		<a href="tel:+17097252676">
+		<a href="tel:+17097272914">
 			<div class="container">
 				<div class="row detail">
 					<div class="col">
 						<img src="assets/icon-phone.svg" alt="Phone Icon"">
 					</div>
 					<div class="col is-8">
-						<p class="text-detail">+1 (709) 725-2676</p>
+						<p class="text-detail">+1 (709) 727-2914</p>
 					</div>
 					<div class="col">
 						<img src="assets/right-arrow.svg" alt="Right Arrow" height="50%" width="40%">
